# holium-node

./: .gitignore  API.md  CLI.md  Cargo.toml  README.md  diesel.toml  points.txt  zod_urbit
.docs/: DEV.md  NETWORK.md  ROOMS.md  SPEC.md  TESTING.md  app-store.md
desks/hol-api/: desk.bill
desks/hol-api/app/: hol-api.hoon
desks/holon/: desk.bill
desks/holon/app/: app-store.hoon  holon.hoon
desks/holon/lib/holon/: peers.hoon
desks/holon/mar/holon/: peers.hoon
desks/holon/sur/: app-store.hoon  holon.hoon
eth/: hardhat.config.js  package.json
src/: main.rs
src/api/: mod.rs
src/cli/: instance.rs  mod.rs  printer.rs  rooms.rs  tmux.rs  urbit.rs
src/instance/: mod.rs  urbit.rs
src/instance/urbit/: channel.rs  interface.rs  mod.rs
src/lib/conduit/: Cargo.toml
src/lib/conduit/src/: conduit.rs  lib.rs  manager.rs  peer_2.rs
src/lib/conduit/src/holon/: address.rs  foreign_peer.rs  hd_wallet.rs  mod.rs  our_peer.rs  peer.rs  state.rs
src/lib/conduit/src/old-code/: peer_old.rs
src/lib/db/: Cargo.toml
src/lib/db/src/: api.rs  conn.rs  db.rs  lib.rs  models.rs  schema.rs
src/lib/db/src/migrations/: 00000001_initial.sql
src/lib/db/src/migrations/2023-06-25-004539_create_passport/: down.sql  up.sql
src/lib/net/: Cargo.toml  readme.md
src/lib/net/src/: dispatcher.rs  lib.rs  socket.rs  types.rs
src/lib/os/src/: state_machine.rs
src/lib/passport/: Cargo.toml
src/lib/passport/src/: api.rs  lib.rs  model.rs  schema.rs
src/lib/peers/: Cargo.toml  PEERS.md
src/lib/peers/src/: peer.rs
src/lib/rooms/: Cargo.toml
src/lib/rooms/src/: api.rs  lib.rs  room.rs  socket.rs  state.rs  types.rs
src/lib/rooms/test-ui/: README.md  client.js  package.json
src/lib/rooms/test-ui/src/: App.css  App.js  PeerStore.js  index.js  wscli.js
src/lib/trace/: Cargo.toml
src/lib/trace/src/: lib.rs
src/lib/urbit/: Cargo.toml
src/lib/urbit/src/: api.rs  channel.rs  context.rs  db.rs  error.rs  interface.rs  lens.rs  lib.rs  process.rs  ship.rs  sub.rs  subscription.rs  ws.rs
src/lib/urbit/src/apps/: api.rs  handlers.rs  mod.rs  routes.rs  store.rs
src/lib/urbit/src/chat/: api.rs  core.rs  data.rs  mod.rs  types.rs
src/lib/urbit/src/chat/sql/: 0001.sql
src/lib/urbit/src/chatdb/: api.rs  hub.rs  main.rs  mod.rs  socket.rs  traits.rs  types.rs
src/node/: runner.rs
src/os/: Cargo.toml  readme.md
src/os/src/: action.rs  effect.rs  event_log.rs  global_state.rs  main.rs  state.rs
src/os/src/holon/: address.rs  foreign_peer.rs  hd_wallet.rs  mod.rs  our_peer.rs
src/os/src/modules/: mod.rs
src/os/src/modules/conduit/: actions.rs  effects.rs  mod.rs  types.rs
src/os/src/modules/db/: mod.rs  state.rs
src/os/src/modules/db/providers/: chat.rs  mod.rs  ship.rs  types.rs
src/os/src/modules/passport/: action.rs  effect.rs  identity_state.rs  mod.rs  passport_state.rs  readme.md
src/os/src/modules/passport/contracts/: abstract_nft.rs  azimuth.rs  ens.rs  mod.rs
src/os/src/modules/passport/contracts/abi/: azimuth.json
src/os/src/modules/passport/states/: created.rs  initializing.rs  mod.rs  ready.rs
src/os/src/states/: active.rs  boot.rs  booting.rs  genesis.rs  idle.rs  init.rs  mod.rs  online.rs  shutdown.rs
src/urbit/: mod.rs
