[package]
name = "holon"
version = "0.1.0"
edition = "2021"
description = "A self-contained node that wraps an Urbit instance, delivering modern capabilities to Realm users."
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>"]
default-run = "holon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
ctrlc = "3.1.9"
warp = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
term-table = "1.1"
prettycli = "*"
serde_json = "1.0.96"
warp-reverse-proxy = "1.0.0"
tokio-tungstenite = "0.19.0"
anyhow = "1.0.71"
rusqlite = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
lazy_static = "1.4.0"
serde_with = "3.0.0"
urbit-api = { path = "./src/lib/urbit" }
bedrock-db = { path = "./src/lib/db" }
rooms = { path = "./src/lib/rooms" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
proctitle = "0.1.1"
async-trait = "0.1.68"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
mediasoup = "0.11.4"
event-listener-primitives = "2.0.1"
parking_lot = "0.12.1"
async-lock = "2.7.0"
actix = "0.13.0"
futures-lite = "1.13.0"
env_logger = "0.10.0"


[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[[bin]]
name = "node"
path = "src/bin/node/main.rs"
test = false
bench = false


