[package]
name = "holon"
version = "0.1.0"
edition = "2021"
description = "A self-contained node that wraps an Urbit instance, delivering modern capabilities to Realm users."
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>"]
default-run = "holon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
bedrock-db = { path = "./src/lib/db" }
rooms = { path = "./src/lib/rooms" }
urbit-api = { path = "./src/lib/urbit" }
peers = { path = "./src/lib/peers" }
conduit = { path = "./src/lib/conduit" }
#
bytes = "1.0"
event-listener-primitives = "2.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
term-table = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp-reverse-proxy = "1.0.0"
warp-sessions = "1.0.19"
warp = "0.3.5"
serde_derive = "1.0.163"

#
ethers = "2.0"
use = "0.0.0"
hex-literal = "0.4.1"
hex = "0.4.3"
async-trait = "0.1.71"
bincode = "1.3.3"
x25519-dalek = {version ="2.0.0-rc.3", features = ["static_secrets"]}
zeroize = "1.6.0"
hdwallet = "0.4.1"
sha3 = "0.10.8"
sha2 = "0.10.7"
bip32 = "0.5.1"
secp256k1 = "0.26.0"
rand_core = "0.6.4"
rand = "0.8.5"

# db module
anyhow = "1.0.71"
rusqlite = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"



[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[[bin]]
name = "node"
path = "src/bin/node/main.rs"
test = false
bench = false

[[bin]]
name = "os"
path = "src/os/src/main.rs"
test = false
bench = false

[features]
# no features by default
default = []

debug_log = []
