[package]
name = "conduit"
version = "0.1.0"
description = "A module can send data from peer node to peer node"
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>"]
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"
crypto = "0.5.1"
x25519-dalek = {version ="2.0.0-rc.3", features = ["static_secrets"]}
sha2 = "0.10.7"
bip32 = "0.5.1"
rand_core = "0.6.4"
rand = "0.8.5"
aes = "0.8.3"
hdwallet = "0.4.1"
secp256k1 = "0.26.0"
sha3 = "0.10.8"
zeroize = "1.6.0"
