[package]
name = "rooms"
version = "0.1.0"
description = "A standalone module for voice/data rooms in Realm"
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>"]
edition = "2021"

[dependencies]
eventsource-threaded = "0.1.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
thiserror = "1.0.40"
json = "0.12.4"
rand = "0.8.5"
futures = "0.3"
serde = "1.0.163"
warp = "0.3.5"
anyhow = "1.0.71"
serde_json = "1.0.96"
lazy_static = "1.4.0"
