[package]
name = "trace"
version = "0.1.0"
description = "tracing utility for holon/node"
authors = ["patrick@holium.com"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
colored_json = "3.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"

[features]
# no features by default
default = []
trace = []