[package]
name = "urbit-api"
version = "0.1.0"
description = "A Rust library for interacting with Urbit's HTTP API. Ported from https://github.com/robkorn/rust-urbit-http-api"
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>", "Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bedrock-db = { path = "../../lib/db" }
eventsource-threaded = "0.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
thiserror = "1.0.40"
rand = "0.8.5"
futures = "0.3"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = "1.28.1"