[package]
name = "urbit-api"
version = "0.1.0"
description = "A Rust library for interacting with Urbit's HTTP API. Ported from https://github.com/robkorn/rust-urbit-http-api"
authors = ["Trent Gillham <6413077+drunkplato@users.noreply.github.com>", "Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bedrock-db = { path = "../../lib/db" }
eventsource-threaded = "0.1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
thiserror = "1.0.40"
rand = "0.8.5"
futures = "0.3"
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = "1.28.1"
tokio-stream = "0.1.14"
warp = "0.3.5"
warp-real-ip = "0.2.0"
tokio-tungstenite = "*"
tungstenite = {version = "0.19.0", features = ["native-tls"]}
url = "2.2.2"
# websocket = "0.26.5"